# arm-cmake

./: arm-gcc-toolchain.cmake
cores/: M0.cmake  M3.cmake  M33.cmake  M4.cmake  M7.cmake  init_flags.cmake  utils.cmake
example/: CMakeLists.txt
example/Core/: CMakeLists.txt
example/Core/Src/: gpio.c
examples/AT32/: CMakeLists.txt
examples/AT32/src/: CMakeLists.txt  at32f435_437_int.c  main.c
examples/STM32/: CMakeLists.txt
examples/STM32/Core/: CMakeLists.txt
examples/STM32/Core/Src/: main.c
